--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -418,19 +418,26 @@ table.misc,
     background-color: #bbb;
 }
 
+.greytable #cell1 td.chart,
+.greytable #cell2 td.chart
+{
+    background-color: inherit;
+    border: 0;
+    padding-left: 1em;
+}
 .greytable #cell1 td.table_number,
 .greytable #cell2 td.table_number
 {
     text-align: right;
-    padding-right: 3px;
-    padding-left: 3px;
+    padding-right: 0.25em;
+    padding-left: 0.5em;
 }
 .greytable #cell1 td.table_date,
 .greytable #cell2 td.table_date
 {
     text-align: center;
-    padding-right: 3px;
-    padding-left: 3px;
+    padding-right: 0.5em;
+    padding-left: 0.5em;
 }
 /* next two declarations are probably deprecated */
 .greytable input[type="text"]
