New clan trophy: variant/trophy combinations

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -263,5 +263,9 @@
           %li#clan-deaths
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-deaths.png"}
             %span= "Most unique deaths (<a href='/deaths#unique_deaths'>look here for unique deaths of played games</a>)"
+          %li#clan-variant-trophies
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-variant-trophies.png"}
+            %span
+              Most variant/trophy combinations
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
