--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -11,3 +11,5 @@
       =haml :clan_competition_trophy
       - @trophy = "most_ascensions_in_a_24_hour_period"
       =haml :clan_competition_trophy
+      - @trophy = "most_variant_trophy_combinations"
+      =haml :clan_competition_trophy
