linkify #junethack and RGRN

--- a/views/about.haml
+++ b/views/about.haml
@@ -22,7 +22,10 @@
     .text_content.non_top_post
       %p
         The official place of contact with the Junethack developers is at the
-        \#junethack IRC channel on Freenode. We also read RGRN and the 
+        %a{:href => "irc://chat.freenode.net/junethack"}#junethack IRC channel
+        on Freenode. We also read
+        %a{:href => "http://nethackwiki.com/wiki/Rec.games.roguelike.nethack"}RGRN
+        and the
         %a{:href => "http://alt.org/nethack/forum/"}NAO forum.
     .text_content.non_top_post
       %p
