fix the continental confusion

--- a/views/servers.haml
+++ b/views/servers.haml
@@ -33,9 +33,9 @@
             &nbsp;
         %tr
           %td
-            acehack.eu
+            acehack.us
           %td
-            %a{:href => "/server/aeu"} AEU
+            %a{:href => "/server/aus"} AUS
           %td
             acehack
           %td
