--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
     %link{:href => "/style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
-    - games_count = Game.count :conditions => [ 'user_id is not null' ]
+    - games_count = Game.count :conditions => [ 'user_id > 0' ]
     - if games_count == 0 then
       %title= "Junethack - #{User.count} players already registered!"
     - else
