Add NetHack4 server

--- a/views/servers.haml
+++ b/views/servers.haml
@@ -109,4 +109,17 @@
             Grunt
           %td
             &nbsp;
+        %tr
+          %td
+            nethack4.org
+          %td
+            %a{:href => "/server/nh4"} NH4
+          %td
+            nethack4
+          %td
+            &nbsp;
+          %td
+            ais523
+          %td
+            &nbsp;
       %span#end_of_content_spacer.clear
