Remove NetHack 1.3d from the website's text

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -99,9 +99,9 @@
           %a{:href => "/trophies"}
             here.
         %p
-          Cross-variant trophies exclude NetHack 1.3d; the "Sightseeing
-          Tour" trophy requires a game from each variant to be played for at
-          least 1000 turns, or to finish with an ascension; the "Globetrotter"
+          The "Sightseeing
+          Tour" trophy requires a finished game from each variant to be played for at
+          least 1000 turns, or finished with an ascension; the "Globetrotter"
           trophy doesn't require a full trophy for each variant - a single
           achievement out of the set for each variant is enough.
         %p
