--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -29,14 +29,13 @@
             %span
               King of the world: ascend in all variants
 
-        %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack and AceHack. NetHack 1.3d does not contribute to the completion of these trophies.
+        %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, NetHack4.
 
         .text_content.non_top_post
         %h3
           All Variants
         %p
-          These trophies apply separately to each variant (excluding NetHack
-          1.3d). Each is worth one point.
+          These trophies apply separately to each variant. Each is worth one point.
           %br
           %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
         %ul.trophypage
@@ -97,7 +96,7 @@
             %p
               Achievement trophy (each subtrophy is worth an equal fraction of a
               point):
-            For AceHack, the requirements are sometimes different. When
+            For AceHack and NetHack4, the requirements are sometimes different. When
             applicable this is noted in parentheses next to the vanilla
             requirement.
             %ul.trophypage{:style => "margin-left: 2em;"}
@@ -151,7 +150,7 @@
                   Escapologist: escape in celestial disgrace
         .text_content.non_top_post
         %h3
-          AceHack and UnNetHack
+          AceHack, NetHack4 and UnNetHack
         %ul.trophypage
           %li#m-croesus
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-croesus.png"}
@@ -182,37 +181,13 @@
             %span
               Hoarder: ascend carrying all the invocation items
         .text_content.non_top_post
-        %h3
-          Nethack 1.3d
-        %ul.trophypage
-          %li#old-ascension
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-ascension.png"}
-            %span 
-              Ascension: ascend a character.
-          %li
-            Achievement trophy (each subtrophy is worth an equal fraction of a
-            point):
-            %ul.trophypage{:style => "margin-left: 2em;"} 
-              %li#old-crowned
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-crowned.png"}
-                %span
-                  get crowned
-              %li#old-hell
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-hell.png"}
-                %span
-                  enter Hell
-              %li#old-wizard
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-wizard.png"}
-                %span
-                  defeat Rodney
-        .text_content.non_top_post
         %h2         
           Competitions
         %h3
           All Variants
         %p
-          These competitions apply separately to each variant (excluding NetHack
-          1.3d). First place is awarded 4 points, second place is awarded 3,
+          These competitions apply separately to each variant.
+          First place is awarded 4 points, second place is awarded 3,
           2 for third place. For others they are awarded (winner's score/
           player's score) swapping for fastest ascension and lowest score.
         %ul.trophypage
