Rearrange entries on rules page

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -29,7 +29,7 @@
           %li
             Pudding farming.
           %li
-            Start scumming.
+            Start scumming. (look <a href="#startscumming">here for the definition</a> of a start scummed game)
           %li
             Looking at player dumplogs to see what items a bones pile has.
           %li
@@ -51,19 +51,9 @@
           We haven't had any blatant cheating incidents in the past. Just use 
           common sense and you will be fine.
         .text_content.non_top_post
-      %h2
-        Other things
-      %p
-        %p{:id => "startscumming"}
-          For this tournament,
-          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scumming games
-          are defined as games where the player escapes or quits within the first 10
-          turns. Such games are hidden on the games tables but are otherwise treated like
-          normal games.
-        %p
-          Streaks are sequences of non-overlapping games played on a single
-          game server account, with no games in-between.
-        .text_content.non_top_post
+
+        %h2{:id => "scoring"}
+          Scoring
         %p
           The score for competitions and clan competitions is calculated as
           follows:
@@ -107,4 +97,17 @@
         %p
           The "No membership card" and "Too good for a brain" trophies are
           UnNetHack-specific.
+        .text_content.non_top_post
+      %h2
+        Other things
+      %p
+        %p{:id => "startscumming"}
+          For this tournament,
+          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scumming games
+          are defined as games where the player escapes or quits within the first 10
+          turns. Such games are hidden on the games tables but are otherwise treated like
+          normal games.
+        %p
+          Streaks are sequences of non-overlapping games played on a single
+          game server account, with no games in-between.
     %span#end_of_content_spacer.clear
