Consistent naming of the NetHack Cross-Variant Summer tournament

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -55,7 +55,7 @@
       .hcenter
         - if @show_banner
           .logotitles
-            %h1 NetHack
+            %h1 NetHack Cross-Variant
           .logoimage
             %p
               %img{:alt => "Logo", :src => "/banner_at2.png"}/
