--- a/views/splash.haml
+++ b/views/splash.haml
@@ -14,7 +14,7 @@
   .text_content_wrapper
     .text_content
       %h2
-        Welcome to the NetHack Summer tournament site!
+        Welcome to the NetHack Cross-Variant Summer Tournament site!
       %p
         Are you ready to embark the Dungeons of Doom? To kill all your
         enemies and EAT their corpses? Collect all the treasures the
@@ -25,7 +25,7 @@
       %p
         Then play NetHack.
       %p
-        And also play in the NetHack Summer tournament.
+        And also play in the NetHack Cross-Variant Summer Tournament.
     .text_content.non_top_post
       =haml :news
     .text_content.non_top_post
