--- a/views/about.haml
+++ b/views/about.haml
@@ -2,7 +2,7 @@
   .text_content_wrapper
     .text_content
       %p
-        This is NetHack Summer tournament. It runs annually during June.
+        This is the NetHack Cross-Variant Summer Tournament. It runs annually during June.
       %p
         NetHack is a classic roguelike game. If you don't what that is, try using
         a Google search.
