Add missing GruntHack to "all variants" entry

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -29,7 +29,7 @@
             %span
               King of the world: ascend in all variants
 
-        %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, NetHack4.
+        %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, GruntHack, NetHack4.
 
         .text_content.non_top_post
         %h3
