Drop NAO forum as an official place of contact.

--- a/views/about.haml
+++ b/views/about.haml
@@ -21,12 +21,11 @@
         latency server.
     .text_content.non_top_post
       %p
-        The official place of contact with the Junethack developers is at the
+        Our points of contact are the
         %a{:href => "irc://chat.freenode.net/junethack"}#junethack IRC channel
-        on Freenode. We also read
-        %a{:href => "http://nethackwiki.com/wiki/Rec.games.roguelike.nethack"}RGRN
-        and the
-        %a{:href => "http://alt.org/nethack/forum/"}NAO forum.
+        on the Freenode IRC network and
+        %a{:href => "http://nethackwiki.com/wiki/rec.games.roguelike.nethack"}rec.games.roguelike.nethack
+        newsgroup.
     .text_content.non_top_post
       %p
         This website and the underlying software has been developed by the
