--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -12,30 +12,29 @@
           %li#sightseeing
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
             %span
-              Sightseeing tour: finish a game in all variants (die after 1000 turns or ascend)
-
+              Sightseeing tour: finish a game in all variants.
+              Each variant must have a game that has been played for at
+              least 1000 turns.
           %li#globetrotter
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/globetrotter.png"}
             %span
-              Globetrotter: get a trophy for each variant
-
+              Globetrotter: get a trophy for each variant.
           %li#anti-stoner
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/anti-stoner.png"}
             %span
-              Anti-Stoner: defeat Medusa in all variants
-
+              Anti-Stoner: defeat Medusa in all variants.
           %li#king
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/king.png"}
             %span
-              King of the world: ascend in all variants
+              King of the world: ascend in all variants.
 
         %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, GruntHack, NetHack4.
-
         .text_content.non_top_post
         %h3
           All Variants
         %p
-          These trophies apply separately to each variant. Each is worth one point.
+          These trophies apply separately to each variant.
+          Each is worth one point.
           %br
           %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
         %ul.trophypage
@@ -66,12 +65,16 @@
             %span
               Ascension: ascend a character.
           %li#m-soko
+            %h3
+              Achievement trophies
             %p
-              Achievement trophy (each subtrophy is worth an equal fraction of a
-              point):
-            For AceHack and NetHack4, the requirements are sometimes different. When
-            applicable this is noted in parentheses next to the vanilla
-            requirement.
+              Achievement trophies yield equal fractions of a point
+              according to how many achievements were obtained in the whole
+              tournament.
+            %p
+              For AceHack and NetHack4, the requirements are sometimes different. When
+              applicable this is noted in parentheses next to the vanilla
+              requirement.
             %ul.trophypage{:style => "margin-left: 2em;"}
               %li
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-soko.png"}
@@ -154,15 +157,21 @@
             %span
               Hoarder: ascend carrying all the invocation items
         .text_content.non_top_post
-        %h2         
+        %h2
           Competitions
         %h3
           All Variants
         %p
           These competitions apply separately to each variant.
           First place is awarded 4 points, second place is awarded 3,
-          2 for third place. For others they are awarded (winner's score/
-          player's score) swapping for fastest ascension and lowest score.
+          2 for third place. The remaining players get points according
+          to the ratio of their best evaluated game to the winner(s)' best
+          evaluated game. Only the best game for each player is considered,
+          for each category.
+        %p
+          In case of a tie, all the players with the same evaluation get
+          the same amount of points; in the ranking, they're considered
+          as one player.
         %ul.trophypage
           %li#c-most-ascensions
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-ascensions.png"}
@@ -183,7 +192,7 @@
           %li#c-lowest-score
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-lowest-score.png"}
             %span
-              Lowest scoring ascension
+              Lowest scoring ascension (not counting negative scores)
           %li#c-most-conducts
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-conducts.png"}
             %span
@@ -192,9 +201,15 @@
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-longest-streak.png"}
             %span
               Longest ascension streak
+              (non-overlapping games played on a single game server
+              account with no games in-between.)
         .text_content.non_top_post
         %h3
           Clan Competitions
+        %p
+          The scores for clan competitions follow the same rules
+          as competition rules. Each player contributes to the total clan
+          score.
         %ul.trophypage
           %li#clan-24h
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-24h.png"}
