--- a/views/splash.haml
+++ b/views/splash.haml
@@ -2,10 +2,11 @@
   .title_text
     %p
       Running from 1 June until the end of 30 June 2012
+  // countdown to tournament start
+  - if Time.new.to_i < $tournament_starttime
+    .title_text
+      %p= parse_seconds $tournament_starttime - Time.new.to_i
   - if @logged_in 
-    - if Time.new.to_i < $tournament_starttime
-      .title_text
-        %p= parse_seconds $tournament_starttime - Time.new.to_i
     - if Time.new.to_i > $tournament_signupstarttime and Time.new.to_i < $tournament_endtime
       .signup_text
         %p
