--- a/views/news.haml
+++ b/views/news.haml
@@ -1,4 +1,5 @@
 %h2
   News and Info
 %ul
+  %li= "<b>2012-06-01</b>: Junethack 2012 has been started!"
   %li= "<b>2012-05-01</b>: <a href='register'>Pre-registration for Junethack 2012</a> has been opened."
