remove unneeded second the from trophies page (thanks raisse\splat)

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -95,7 +95,7 @@
               %li#m-candelabrum
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-candelabrum.png"}
                 %span
-                  get the Candelabrum of the Invocation (defeat Vlad)
+                  get the Candelabrum of Invocation (defeat Vlad)
               %li#m-book
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-book.png"}
                 %span
