--- a/views/server.haml
+++ b/views/server.haml
@@ -15,6 +15,8 @@
             %th Name
             %th Points
             %th Killer
+            -# download column
+            %th
             %th Time (UTC)
           - count = 0
           - @games.each do |game|
@@ -28,5 +30,10 @@
                   #{h game.name}
               %td.table_number= game.points
               %td= h game.death
+              %td.dllink
+                -# link to the dumplog of the game if possible
+                - link = game.server.dumplog_link(game)
+                - if link then
+                  (<a href="#{link}">d</a>)
               %td.table_date= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d&nbsp;%H:%M")
     %span#end_of_content_spacer.clear 
