News about dumplog links being added

--- a/views/news.haml
+++ b/views/news.haml
@@ -1,6 +1,7 @@
 %h2
   News and Info
 %ul
-  %li= "<b>2012-06-06</b>: Trophies for AceHack and NetHack4 should display correctly now"
+  %li= "<b>2012-06-09</b>: Download links to dumplogs for specific servers added."
+  %li= "<b>2012-06-06</b>: Trophies for AceHack and NetHack4 should display correctly now."
   %li= "<b>2012-06-01</b>: Junethack 2012 has started!"
   %li= "<b>2012-05-01</b>: <a href='register'>Pre-registration for Junethack 2012</a> has been opened."
