Add some info about registered players and played games to the news section

--- a/views/news.haml
+++ b/views/news.haml
@@ -1,6 +1,8 @@
 %h2
   News and Info
 %ul
+  %li= "<b>2012-06-21</b>: 3000 games have been played!"
+  %li= "<b>2012-06-11</b>: 125 players have signed up!"
   %li= "<b>2012-06-09</b>: Download links to dumplogs for specific servers added."
   %li= "<b>2012-06-06</b>: Trophies for AceHack and NetHack4 should display correctly now."
   %li= "<b>2012-06-01</b>: Junethack 2012 has started!"
