--- a/views/activity.haml
+++ b/views/activity.haml
@@ -6,11 +6,41 @@
 
 .content_bulk
   .text_content_wrapper
+    - cache_fragment("games_variants_#{Game.max_endtime}") do
+      .text_content
+        %h2 Finished Games per Day and Variant
+        .scorelisting
+          %table.greytable.misc
+            -# table header
+            %tr
+              %th Date (UTC)
+              - $variants.each do |v|
+                %th= $variants_mapping[v]
+
+            -# table data
+            - count = 0
+            - today = Time.now.to_i
+            - $tournament_starttime.step($tournament_endtime,86400).each do |datum|
+              - if today > datum then
+                - style = (count % 2) == 0 ? "cell1" : "cell2"
+                - count += 1
+                %tr{:id => style}
+                  %td.table_date= h Time.at(datum).getutc.strftime("%Y-%m-%d")
+                  - $variants.each do |v|
+                    - finished_variant_games_per_day = repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and endtime >= ? and endtime < ?;", v, datum, datum+86400
+                    %td.table_number= finished_variant_games_per_day
+            - style = (count % 2) == 0 ? "cell1" : "cell2"
+            %tr{:id => style}
+              %td.table_date= "Total"
+              - $variants.each do |v|
+                - finished_variant_games = repository.adapter.select "select count(1) from games where user_id > 0 and version = ?;", v
+                %td.table_number= finished_variant_games
+
     - cache_fragment("ascensions_#{Game.max_ascended_endtime}") do
       // Ugly SQL to also get days with zero ascensions. Will only work
       // as long there are any games for each day
       - @ascensions_per_day = repository.adapter.select "select days.datum, endtime, count from (select endtime, date(endtime, 'unixepoch') as datum from games group by datum) days left join (select datum, count(1) as count from (select date(endtime, 'unixepoch') as datum from games where user_id is not null and ascended='t') group by datum) counts on counts.datum = days.datum;"
-      .text_content
+      .text_content.non_top_post
         %h2 Ascensions per Day
         .scorelisting
           %table.greytable.misc
