News: Junethack is over

--- a/views/news.haml
+++ b/views/news.haml
@@ -1,6 +1,7 @@
 %h2
   News and Info
 %ul
+  %li= "<b>2012-07-01</b>: Junethack 2012 is over. Thanks for playing!"
   %li= "<b>2012-06-21</b>: 3000 games have been played!"
   %li= "<b>2012-06-11</b>: 125 players have signed up!"
   %li= "<b>2012-06-09</b>: Download links to dumplogs for specific servers added."
