--- a/views/games_played.haml
+++ b/views/games_played.haml
@@ -1,13 +1,14 @@
 %h2= @games_played_title
-.scorelisting
-  %table.greytable
-    %tr
-      %th Name
-      %th Variant
-      %th Server
-      %th Points
-      %th Killer
-      %th Time (UTC)
+.scorelisting#no-more-tables
+  %table.greytable.cf
+    %thead.cf
+      %tr
+        %th Name
+        %th Variant
+        %th Server
+        %th Points
+        %th Killer
+        %th Time (UTC)
     - count = 0
     - @games_played.each do |game|
       - style = (count % 2) == 0 ? "cell1" : "cell2"
@@ -18,8 +19,8 @@
             %a{:href => "/user_id/#{game.user_id}"}= h game.name
           - else
             = h game.name
-        %td= h game.variant_name
-        %td= h game.server.url
-        %td.table_number= game.points
-        %td= h game.death
-        %td.table_date= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d&nbsp;%H:%M")
+        %td{"data-title" => "Name"}= h game.variant_name
+        %td{"data-title" => "Server"}= h game.server.url
+        %td.table_number{"data-title" => "Points"}= game.points
+        %td{"data-title" => "Killer"}= h game.death
+        %td.table_date{"data-title" => "Time"}= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d&nbsp;%H:%M")
