--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
     %link{:href => "/style-mobile.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "/no-more-tables.css", :rel => "stylesheet", :type => "text/css"}/
     - games_count = Game.count :conditions => [ 'user_id > 0' ]
     - if games_count == 0 then
       %title= "Junethack - #{User.count} players already registered!"
@@ -14,10 +15,7 @@
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="http://junethack.rawrnix.com/vivid_divider.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   %body
     #container
