mobile: Turn off telephone number detection on iOS

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -16,6 +16,8 @@
     <meta property="og:image" content="http://junethack.rawrnix.com/vivid_divider.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Turn off telephone number detection on iOS. -->
+    <meta name="format-detection" content="telephone=no">
 
   %body
     #container
